--- a/index.html
+++ b/index.html
@@ -1,115 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple E-commerce</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My E-Shop</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: Arial, sans-serif; background: #f5f5f5; }
+
+    header {
+      background: #f68b1e;
+      color: white;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    header input {
+      width: 40%;
+      padding: 8px;
+      border: none;
+      border-radius: 5px;
+    }
+
+    nav {
+      background: #333;
+      color: white;
+      padding: 10px;
+      display: flex;
+      justify-content: space-around;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      padding: 8px;
+    }
+
+    .hero {
+      background: url('https://via.placeholder.com/1200x400') center/cover no-repeat;
+      height: 400px;
+    }
+
+    .section-title {
+      margin: 20px;
+      font-size: 24px;
+      color: #333;
+    }
+
+    .products {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px;
+    }
+
+    .product-card {
+      background: white;
+      width: 200px;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      transition: 0.3s;
+    }
+
+    .product-card:hover {
+      transform: scale(1.05);
+    }
+
+    .product-card img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+    }
+
+    .product-card h3 {
+      font-size: 16px;
+      margin: 10px 0 5px;
+    }
+
+    .product-card p {
+      color: #f68b1e;
+      font-weight: bold;
+    }
+
+    footer {
+      background: #222;
+      color: #aaa;
+      text-align: center;
+      padding: 20px;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="navbar-container">
-      <a href="#" class="brand">E-Shop</a>
-      <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">Shop</a>
-        <a href="#">Cart</a>
-      </div>
+  <header>
+    <h1>MyShop</h1>
+    <input type="text" placeholder="Search for products...">
+    <div>
+      <a href="#" style="color:white; margin-right:10px;">Login</a>
+      <a href="#" style="color:white;">Cart</a>
     </div>
+  </header>
+
+  <nav>
+    <a href="#">Electronics</a>
+    <a href="#">Fashion</a>
+    <a href="#">Home</a>
+    <a href="#">Supermarket</a>
+    <a href="#">Phones</a>
   </nav>
 
-  <!-- Search Bar Section -->
-  <div class="search-container">
-    <input type="text" id="search-input" class="search-input" placeholder="Search products..." onkeyup="searchProducts()">
-    <button class="search-btn">Search</button>
-  </div>
+  <div class="hero"></div>
 
-  <!-- Product Listings -->
-  <section class="product-section">
-    <h2>Shop Our Products</h2>
-    <div class="product-grid" id="product-grid">
-      <!-- Product 1 -->
-      <div class="product-card" data-name="Product 1" data-description="This is product 1." data-price="19.99">
-        <img src="https://via.placeholder.com/200" alt="Product 1">
-        <div class="product-info">
-          <h3>Product 1</h3>
-          <p>$19.99</p>
-          <p class="product-description">This is product 1.</p>
-          <button class="add-to-cart" onclick="addToCart('Product 1', 19.99)">Add to Cart</button>
-          <button class="purchase-btn">Purchase</button>
-        </div>
-      </div>
-      <!-- More products can be added similarly -->
+  <h2 class="section-title">Featured Products</h2>
+
+  <div class="products">
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150" alt="Product">
+      <h3>Smartphone</h3>
+      <p>Ksh 12,000</p>
     </div>
-  </section>
-
-  <!-- Cart Section -->
-  <div class="cart-section">
-    <h3>Your Cart</h3>
-    <ul id="cart-items"></ul>
-    <button id="send-cart-btn" onclick="sendCartDetails()">Send Cart Details</button>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150" alt="Product">
+      <h3>Running Shoes</h3>
+      <p>Ksh 3,499</p>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150" alt="Product">
+      <h3>Smart TV 42"</h3>
+      <p>Ksh 28,999</p>
+    </div>
   </div>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>&copy; 2025 E-Shop, All Rights Reserved</p>
+  <footer>
+    <p>© 2025 MyShop. All rights reserved.</p>
   </footer>
 
-  <script>
-    // Cart array to store items
-    let cart = [];
-
-    // Function to add items to the cart
-    function addToCart(productName, productPrice) {
-      cart.push({ name: productName, price: productPrice });
-      updateCartUI();
-    }
-
-    // Function to update the cart UI
-    function updateCartUI() {
-      const cartItemsList = document.getElementById('cart-items');
-      cartItemsList.innerHTML = ''; // Clear current cart
-      cart.forEach(item => {
-        const li = document.createElement('li');
-        li.textContent = `${item.name} - $${item.price}`;
-        cartItemsList.appendChild(li);
-      });
-    }
-
-    // Function to send cart details to a phone number
-    function sendCartDetails() {
-      // Convert cart items to a readable string
-      const cartDetails = cart.map(item => `${item.name}: $${item.price}`).join('\n');
-      
-      // Make an AJAX request to send the cart details to the backend
-      const xhr = new XMLHttpRequest();
-      xhr.open('POST', 'send_cart.php', true);
-      xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-      xhr.onload = function() {
-        if (xhr.status == 200) {
-          alert('Cart details sent successfully!');
-        } else {
-          alert('Failed to send cart details');
-        }
-      };
-      xhr.send(`cartDetails=${encodeURIComponent(cartDetails)}`);
-    }
-
-    // Search functionality (optional)
-    function searchProducts() {
-      const input = document.getElementById("search-input").value.toLowerCase();
-      const products = document.getElementsByClassName("product-card");
-      for (let i = 0; i < products.length; i++) {
-        const productName = products[i].getAttribute("data-name").toLowerCase();
-        if (productName.includes(input)) {
-          products[i].style.display = "block";
-        } else {
-          products[i].style.display = "none";
-        }
-      }
-    }
-  </script>
 </body>
 </html>
