--- a/index.html
+++ b/index.html
@@ -1,143 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My E-Shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>eCom | Home</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; background: #f5f5f5; }
-
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+    }
     header {
-      background: #f68b1e;
+      background-color: #d3222a;
       color: white;
       padding: 10px 20px;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
     }
-    header input {
-      width: 40%;
+    .logo {
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .search-box input {
       padding: 8px;
+      width: 300px;
       border: none;
       border-radius: 5px;
     }
-
-    nav {
-      background: #333;
-      color: white;
-      padding: 10px;
+    .user-options {
       display: flex;
-      justify-content: space-around;
+      gap: 15px;
     }
-
+    nav {
+      background: #fff;
+      display: flex;
+      padding: 10px;
+      overflow-x: auto;
+      border-bottom: 1px solid #ddd;
+    }
     nav a {
-      color: white;
+      margin-right: 15px;
       text-decoration: none;
-      padding: 8px;
-    }
-
-    .hero {
-      background: url('https://via.placeholder.com/1200x400') center/cover no-repeat;
-      height: 400px;
-    }
-
-    .section-title {
-      margin: 20px;
-      font-size: 24px;
       color: #333;
+      font-weight: bold;
     }
-
-    .products {
+    .main {
+      display: flex;
+    }
+    .sidebar {
+      width: 200px;
+      background: #fff;
+      padding: 10px;
+      border-right: 1px solid #ddd;
+    }
+    .sidebar h3 {
+      margin-bottom: 10px;
+      color: #d3222a;
+    }
+    .sidebar ul {
+      list-style: none;
+    }
+    .sidebar li {
+      margin-bottom: 8px;
+      cursor: pointer;
+    }
+    .hero {
+      flex: 1;
+      background: url('https://via.placeholder.com/1000x350/FF7F50/FFFFFF?text=Top+Rated+Picks') center/cover no-repeat;
+      height: 350px;
+    }
+    .categories, .products {
+      padding: 20px;
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
       gap: 20px;
-      padding: 20px;
+      justify-content: center;
     }
-
-    .product-card {
+    .card {
       background: white;
-      width: 200px;
       padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      transition: 0.3s;
+      width: 200px;
+      border-radius: 5px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      text-align: center;
     }
-
-    .product-card:hover {
-      transform: scale(1.05);
-    }
-
-    .product-card img {
+    .card img {
       width: 100%;
       height: 150px;
       object-fit: cover;
     }
-
-    .product-card h3 {
+    .card h4 {
       font-size: 16px;
       margin: 10px 0 5px;
     }
-
-    .product-card p {
-      color: #f68b1e;
+    .card p {
+      color: #d3222a;
       font-weight: bold;
     }
-
     footer {
       background: #222;
-      color: #aaa;
+      color: white;
       text-align: center;
-      padding: 20px;
-      margin-top: 30px;
+      padding: 15px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>MyShop</h1>
-    <input type="text" placeholder="Search for products...">
-    <div>
-      <a href="#" style="color:white; margin-right:10px;">Login</a>
-      <a href="#" style="color:white;">Cart</a>
+    <div class="logo">eCom</div>
+    <div class="search-box">
+      <input type="text" placeholder="I'm looking for...">
+    </div>
+    <div class="user-options">
+      <a href="#" style="color:white">Cart</a>
+      <a href="#" style="color:white">Benjamin Masoa</a>
     </div>
   </header>
 
   <nav>
-    <a href="#">Electronics</a>
-    <a href="#">Fashion</a>
-    <a href="#">Home</a>
-    <a href="#">Supermarket</a>
+    <a href="#">Smart TV</a>
+    <a href="#">Anniversary Sale</a>
     <a href="#">Phones</a>
+    <a href="#">Fashion</a>
+    <a href="#">Fridges</a>
   </nav>
 
-  <div class="hero"></div>
+  <div class="main">
+    <div class="sidebar">
+      <h3>Category</h3>
+      <ul>
+        <li>TV/Audio/Video</li>
+        <li>Phones & Accessories</li>
+        <li>Health & Beauty</li>
+        <li>Home & Living</li>
+        <li>Appliances</li>
+        <li>Computers</li>
+        <li>Fashion</li>
+      </ul>
+    </div>
+    <div class="hero"></div>
+  </div>
 
-  <h2 class="section-title">Featured Products</h2>
-
+  <h2 style="padding: 20px;">Flash Sale</h2>
   <div class="products">
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x150" alt="Product">
-      <h3>Smartphone</h3>
-      <p>Ksh 12,000</p>
+    <div class="card">
+      <img src="https://via.placeholder.com/200x150" alt="">
+      <h4>Wireless Earbuds</h4>
+      <p>Ksh 1,999</p>
     </div>
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x150" alt="Product">
-      <h3>Running Shoes</h3>
-      <p>Ksh 3,499</p>
+    <div class="card">
+      <img src="https://via.placeholder.com/200x150" alt="">
+      <h4>Smart TV 32"</h4>
+      <p>Ksh 12,499</p>
     </div>
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x150" alt="Product">
-      <h3>Smart TV 42"</h3>
-      <p>Ksh 28,999</p>
+    <div class="card">
+      <img src="https://via.placeholder.com/200x150" alt="">
+      <h4>Gas Cooker</h4>
+      <p>Ksh 4,999</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/200x150" alt="">
+      <h4>Necklace & Earrings</h4>
+      <p>Ksh 699</p>
     </div>
   </div>
 
   <footer>
-    <p>© 2025 MyShop. All rights reserved.</p>
+    <p>© 2025 eCom. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
