--- a/shoes.html
+++ b/shoes.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo">eCom</div>
+    <div class="logo"><a href="index.html">eCom</div>
     <div class="user-links">
       <a href="#" style="color: white; text-decoration: none;">Cart</a>
     </div>
