--- a/shoes.html
+++ b/shoes.html
@@ -8,21 +8,31 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
+      background: #f5f5f5;
     }
     .header {
-      background-color: red;
+      background-color: #0d6efd;
       color: white;
       padding: 10px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
     .logo {
       font-size: 24px;
       font-weight: bold;
     }
+    .user-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
     .main {
       padding: 20px;
+    }
+    .main h2 {
+      color: #0d6efd;
     }
     .products {
       display: flex;
@@ -30,16 +40,23 @@
       gap: 20px;
     }
     .product-card {
-      background: #fff;
-      box-shadow: 0 0 10px #ccc;
+      background: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       width: 250px;
       padding: 10px;
       position: relative;
+      overflow: hidden;
+      transition: transform 0.2s;
+    }
+    .product-card:hover {
+      transform: translateY(-5px);
     }
     .product-card img {
       width: 100%;
       height: 150px;
       object-fit: cover;
+      border-radius: 8px;
       cursor: pointer;
     }
     .product-details {
@@ -49,33 +66,46 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255, 255, 255, 0.95);
+      background: rgba(255, 255, 255, 0.97);
       padding: 10px;
       box-sizing: border-box;
       z-index: 10;
+      border-radius: 10px;
     }
     .product-card:hover .product-details {
       display: block;
     }
     .product-card select, .product-card button {
       width: 100%;
-      padding: 5px;
-      margin-top: 5px;
+      padding: 8px;
+      margin-top: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .product-card button {
+      background-color: #0d6efd;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .product-card button:hover {
+      background-color: #0b5ed7;
     }
     .footer {
-      background: red;
+      background: #0d6efd;
       color: white;
       text-align: center;
-      padding: 10px;
-      margin-top: 20px;
+      padding: 15px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
   <div class="header">
-    <div class="logo"><a href="index.html"><button>eCom</button></div>
+    <div class="logo">eCom</div>
     <div class="user-links">
-      <a href="#" style="color: white; text-decoration: none;">Cart</a>
+      <a href="#">Cart</a>
     </div>
   </div>
 
